src/test/ui/associated-types/hr-associated-type-bound-param-5.stderr
error[E0277]: the trait bound `for<'b> <Box<T> as X<'b, Box<T>>>::U: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-5.rs:27:14
   |
LL |     type U = str;
   |              ^^^ the trait `for<'b> Clone` is not implemented for `<Box<T> as X<'b, Box<T>>>::U`
   |
   = help: the following implementations were found:
             <&T as Clone>
note: required by a bound in `X`
  --> $DIR/hr-associated-type-bound-param-5.rs:18:45
   |
LL | trait X<'a, T: Cycle + for<'b> X<'b, T>>
   |       - required by a bound in this
...
LL |     for<'b> <T::Next as X<'b, T::Next>>::U: Clone,
   |                                             ^^^^^ required by this bound in `X`

error[E0277]: the trait bound `for<'b> <Vec<T> as X<'b, Vec<T>>>::U: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-5.rs:27:14
   |
LL |     type U = str;
   |              ^^^ the trait `for<'b> Clone` is not implemented for `<Vec<T> as X<'b, Vec<T>>>::U`
   |
   = help: the following implementations were found:
             <&T as Clone>
note: required by a bound in `X`
  --> $DIR/hr-associated-type-bound-param-5.rs:16:33
   |
LL | trait X<'a, T: Cycle + for<'b> X<'b, T>>
   |       - required by a bound in this
LL | where
LL |     for<'b> <T as X<'b, T>>::U: Clone,
   |                                 ^^^^^ required by this bound in `X`

error[E0277]: the trait bound `for<'b> <Vec<T> as X<'b, Vec<T>>>::U: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-5.rs:33:14
   |
LL |     type U = str;
   |              ^^^ the trait `for<'b> Clone` is not implemented for `<Vec<T> as X<'b, Vec<T>>>::U`
   |
   = help: the following implementations were found:
             <&T as Clone>
note: required by a bound in `X`
  --> $DIR/hr-associated-type-bound-param-5.rs:18:45
   |
LL | trait X<'a, T: Cycle + for<'b> X<'b, T>>
   |       - required by a bound in this
...
LL |     for<'b> <T::Next as X<'b, T::Next>>::U: Clone,
   |                                             ^^^^^ required by this bound in `X`

error[E0277]: the trait bound `for<'b> <Box<T> as X<'b, Box<T>>>::U: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-5.rs:33:14
   |
LL |     type U = str;
   |              ^^^ the trait `for<'b> Clone` is not implemented for `<Box<T> as X<'b, Box<T>>>::U`
   |
   = help: the following implementations were found:
             <&T as Clone>
note: required by a bound in `X`
  --> $DIR/hr-associated-type-bound-param-5.rs:16:33
   |
LL | trait X<'a, T: Cycle + for<'b> X<'b, T>>
   |       - required by a bound in this
LL | where
LL |     for<'b> <T as X<'b, T>>::U: Clone,
   |                                 ^^^^^ required by this bound in `X`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
